feat(ui): implement immersive hero section with stats and gradient typography

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nexus</title>
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/home.css">
     </head>
     <body>
         <nav class="navbar">
@@ -23,5 +24,38 @@
                 <a href="#download" class="btn-primary">Play Now</a>
             </div>
         </nav>
+
+        <section class="hero">
+            <div class="hero-background"></div>
+            <div class="hero-overlay"></div>
+            <div class="hero-content">
+                <div class="hero-badge">Legends of Tomorrow</div>
+                <h1 class="hero-title">
+                    <span class="title-line-1">Choose Your</span>
+                    <span class="title-line-2">Legend</span>
+                </h1>
+                <p class="hero-subtitle">Join the battle in a futuristic world where heroes rise. Master unique abilities, team up with allies, and dominate the Nexus.</p>
+                <div class="hero-buttons">
+                    <a href="#download" class="btn-hero-primary">Download Free</a>
+                    <a href="#" class="btn-hero-secondary">Watch Trailer</a>
+                </div>
+                <div class="hero-stats">
+                    <div class="stat-item">
+                        <div class="stat-value">50M+</div>
+                        <div class="stat-label">Active Players</div>
+                    </div>
+                    <div class="stat-divider"></div>
+                    <div class="stat-item">
+                        <div class="stat-value">24</div>
+                        <div class="stat-label">Unique Heroes</div>
+                    </div>
+                    <div class="stat-divider"></div>
+                    <div class="stat-item">
+                        <div class="stat-value">15+</div>
+                        <div class="stat-label">Epic Maps</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
