--- a/index.html
+++ b/index.html
@@ -57,5 +57,55 @@
                 </div>
             </div>
         </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-top">
+                    <div class="footer-section">
+                        <div class="footer-logo">
+                            <span class="logo-icon">❖</span>
+                            <span class="logo-text">Nexus</span>
+                        </div>
+                        <p class="footer-description">Experience the future of hero-based combat. Join millions of players in the ultimate battle arena.</p>
+                    </div>
+                    <div class="footer-section">
+                        <h4 class="footer-heading">Game</h4>
+                        <ul class="footer-links">
+                            <li><a href="pages/heroes.html">Heroes</a></li>
+                            <li><a href="pages/gameplay.html">Gameplay</a></li>
+                            <li><a href="pages/gallery.html">Gallery</a></li>
+                            <li><a href="pages/about.html">About</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4 class="footer-heading">Community</h4>
+                        <ul class="footer-links">
+                            <li><a href="#">Forums</a></li>
+                            <li><a href="#">Discord</a></li>
+                            <li><a href="#">Esports</a></li>
+                            <li><a href="#">Leaderboards</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4 class="footer-heading">Support</h4>
+                        <ul class="footer-links">
+                            <li><a href="#">Help Center</a></li>
+                            <li><a href="#">Server Status</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-bottom">
+                    <p class="footer-copyright">&copy; 2025 Nexus. All rights reserved.</p>
+                    <div class="footer-social">
+                        <a href="#" class="social-link">Twitter</a>
+                        <a href="#" class="social-link">Facebook</a>
+                        <a href="#" class="social-link">YouTube</a>
+                        <a href="#" class="social-link">Twitch</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
