--- a/index.html
+++ b/index.html
@@ -107,5 +107,7 @@
                 </div>
             </div>
         </footer>
+
+        <script src="scripts/main.js"></script>
     </body>
 </html>
